--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,14 @@ body {
   background: #f1eacd;
 }
 
-body {
-    display: block;
-    margin 8px;
+h1,
+p,
+footer {
+  text-align: center;
+  display: block;
 }
 
-h1 {
-    text-align: center;
-    display: block;
+footer a {
+  margin: 0 10px;
+  color: rgb(25, 112, 25);
 }
