--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ p {
   display: block;
 }
 
-.the-croissant-picture {
+.croissant-picture {
   max-width: 100%;
   border-radius: 10px;
   display: block;
